# try-ocr

./: LICENSE  justfile  pyproject.toml
