[project]
name = "try-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.3.5",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
major_version_zero = true

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
extend = "ruff_defaults.toml"

lint.preview = true

[tool.uv.workspace]
members = [
  "packages/pytess",
  "packages/try-ocrmac",
]
